--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.3.4",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.2.15"
